src/ru/ifmo/ctddev/shalamov/goodLang/GoodLangParser.java
// Generated from src/ru/ifmo/ctddev/shalamov/goodLang/GoodLang.g4 by ANTLR 4.5
package ru.ifmo.ctddev.shalamov.goodLang;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GoodLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, LPAREN=6, RPAREN=7, LBRACE=8, 
		RBRACE=9, PLS=10, MNS=11, MLP=12, DIV=13, OR=14, AND=15, NOT=16, LESS=17, 
		LESSEQUAL=18, GREATER=19, GREATEREQUAL=20, EQUAL=21, NEQUAL=22, ASSIGN=23, 
		COMMA=24, RANGE=25, SHL=26, SHR=27, QUESTION=28, QUOTE=29, IF=30, ELSE=31, 
		WHILE=32, FOR=33, RET=34, FUN=35, VAL=36, SWAP=37, INTEGER=38, ID=39, 
		SEMICOLON=40, WHITESPACE=41, NEWLINE=42, NL=43, SHARP=44;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_declaration = 2, RULE_assignment = 3, 
		RULE_conditional = 4, RULE_loopWhile = 5, RULE_loopFor = 6, RULE_writeOperator = 7, 
		RULE_readOperator = 8, RULE_functionCall = 9, RULE_variableDeclaration = 10, 
		RULE_returnStatement = 11, RULE_swap = 12, RULE_lvalblock = 13, RULE_lval = 14, 
		RULE_rvalblock = 15, RULE_rval = 16, RULE_body = 17, RULE_writable = 18, 
		RULE_expression = 19, RULE_term = 20, RULE_atom = 21, RULE_boolExpression = 22, 
		RULE_boolTerm = 23, RULE_boolAtom = 24, RULE_comparison = 25, RULE_string = 26, 
		RULE_boolConst = 27;
	public static final String[] ruleNames = {
		"program", "statement", "declaration", "assignment", "conditional", "loopWhile", 
		"loopFor", "writeOperator", "readOperator", "functionCall", "variableDeclaration", 
		"returnStatement", "swap", "lvalblock", "lval", "rvalblock", "rval", "body", 
		"writable", "expression", "term", "atom", "boolExpression", "boolTerm", 
		"boolAtom", "comparison", "string", "boolConst"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\r'", "':'", "'.'", "'true'", "'false'", "'('", "')'", "'{'", 
		"'}'", "'+'", "'-'", "'*'", "'/'", "'|'", "'&'", "'!'", "'<'", "'<='", 
		"'>'", "'>='", "'=='", null, "'='", "','", "'..'", "'<<'", "'>>'", "'?'", 
		"'\"'", "'if'", "'else'", "'while'", "'for'", "'ret'", "'fun'", "'val'", 
		"'swap'", null, null, "';'", null, null, "'\n'", "'#'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
		"PLS", "MNS", "MLP", "DIV", "OR", "AND", "NOT", "LESS", "LESSEQUAL", "GREATER", 
		"GREATEREQUAL", "EQUAL", "NEQUAL", "ASSIGN", "COMMA", "RANGE", "SHL", 
		"SHR", "QUESTION", "QUOTE", "IF", "ELSE", "WHILE", "FOR", "RET", "FUN", 
		"VAL", "SWAP", "INTEGER", "ID", "SEMICOLON", "WHITESPACE", "NEWLINE", 
		"NL", "SHARP"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GoodLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GoodLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(58);
				switch (_input.LA(1)) {
				case FUN:
					{
					setState(56);
					declaration();
					}
					break;
				case SHL:
				case SHR:
				case IF:
				case WHILE:
				case FOR:
				case RET:
				case VAL:
				case SWAP:
				case ID:
					{
					setState(57);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(60); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SHL) | (1L << SHR) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << RET) | (1L << FUN) | (1L << VAL) | (1L << SWAP) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public LoopWhileContext loopWhile() {
			return getRuleContext(LoopWhileContext.class,0);
		}
		public LoopForContext loopFor() {
			return getRuleContext(LoopForContext.class,0);
		}
		public WriteOperatorContext writeOperator() {
			return getRuleContext(WriteOperatorContext.class,0);
		}
		public ReadOperatorContext readOperator() {
			return getRuleContext(ReadOperatorContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public SwapContext swap() {
			return getRuleContext(SwapContext.class,0);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(GoodLangParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(GoodLangParser.SEMICOLON, i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(62);
				assignment();
				}
				break;
			case 2:
				{
				setState(63);
				conditional();
				}
				break;
			case 3:
				{
				setState(64);
				loopWhile();
				}
				break;
			case 4:
				{
				setState(65);
				loopFor();
				}
				break;
			case 5:
				{
				setState(66);
				writeOperator();
				}
				break;
			case 6:
				{
				setState(67);
				readOperator();
				}
				break;
			case 7:
				{
				setState(68);
				functionCall();
				}
				break;
			case 8:
				{
				setState(69);
				variableDeclaration();
				}
				break;
			case 9:
				{
				setState(70);
				returnStatement();
				}
				break;
			case 10:
				{
				setState(71);
				swap();
				}
				break;
			}
			setState(77);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(74);
					match(SEMICOLON);
					}
					} 
				}
				setState(79);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode FUN() { return getToken(GoodLangParser.FUN, 0); }
		public TerminalNode ID() { return getToken(GoodLangParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(GoodLangParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(GoodLangParser.RPAREN, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public LvalblockContext lvalblock() {
			return getRuleContext(LvalblockContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(FUN);
			setState(81);
			match(ID);
			setState(82);
			match(LPAREN);
			setState(84);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(83);
				lvalblock();
				}
			}

			setState(86);
			match(RPAREN);
			setState(87);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public LvalblockContext lvalblock() {
			return getRuleContext(LvalblockContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(GoodLangParser.ASSIGN, 0); }
		public RvalContext rval() {
			return getRuleContext(RvalContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			lvalblock();
			setState(90);
			match(ASSIGN);
			setState(91);
			rval();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(GoodLangParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(GoodLangParser.LPAREN, 0); }
		public BoolExpressionContext boolExpression() {
			return getRuleContext(BoolExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GoodLangParser.RPAREN, 0); }
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(GoodLangParser.ELSE, 0); }
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterConditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitConditional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitConditional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_conditional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(IF);
			setState(94);
			match(LPAREN);
			setState(95);
			boolExpression();
			setState(96);
			match(RPAREN);
			setState(97);
			body();
			setState(100);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(98);
				match(ELSE);
				setState(99);
				body();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopWhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(GoodLangParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(GoodLangParser.LPAREN, 0); }
		public BoolExpressionContext boolExpression() {
			return getRuleContext(BoolExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GoodLangParser.RPAREN, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public LoopWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopWhile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterLoopWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitLoopWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitLoopWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopWhileContext loopWhile() throws RecognitionException {
		LoopWhileContext _localctx = new LoopWhileContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_loopWhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(WHILE);
			setState(103);
			match(LPAREN);
			setState(104);
			boolExpression();
			setState(105);
			match(RPAREN);
			setState(106);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopForContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(GoodLangParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(GoodLangParser.LPAREN, 0); }
		public LvalContext lval() {
			return getRuleContext(LvalContext.class,0);
		}
		public List<RvalContext> rval() {
			return getRuleContexts(RvalContext.class);
		}
		public RvalContext rval(int i) {
			return getRuleContext(RvalContext.class,i);
		}
		public TerminalNode RANGE() { return getToken(GoodLangParser.RANGE, 0); }
		public TerminalNode RPAREN() { return getToken(GoodLangParser.RPAREN, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public LoopForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopFor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterLoopFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitLoopFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitLoopFor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopForContext loopFor() throws RecognitionException {
		LoopForContext _localctx = new LoopForContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_loopFor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(FOR);
			setState(109);
			match(LPAREN);
			setState(110);
			lval();
			setState(111);
			rval();
			setState(112);
			match(RANGE);
			setState(113);
			rval();
			setState(114);
			match(RPAREN);
			setState(115);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WriteOperatorContext extends ParserRuleContext {
		public TerminalNode SHL() { return getToken(GoodLangParser.SHL, 0); }
		public List<WritableContext> writable() {
			return getRuleContexts(WritableContext.class);
		}
		public WritableContext writable(int i) {
			return getRuleContext(WritableContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GoodLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GoodLangParser.COMMA, i);
		}
		public WriteOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_writeOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterWriteOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitWriteOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitWriteOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WriteOperatorContext writeOperator() throws RecognitionException {
		WriteOperatorContext _localctx = new WriteOperatorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_writeOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(SHL);
			setState(118);
			writable();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(119);
				match(COMMA);
				setState(120);
				writable();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadOperatorContext extends ParserRuleContext {
		public TerminalNode SHR() { return getToken(GoodLangParser.SHR, 0); }
		public LvalblockContext lvalblock() {
			return getRuleContext(LvalblockContext.class,0);
		}
		public ReadOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterReadOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitReadOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitReadOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadOperatorContext readOperator() throws RecognitionException {
		ReadOperatorContext _localctx = new ReadOperatorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_readOperator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(SHR);
			setState(127);
			lvalblock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GoodLangParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(GoodLangParser.LPAREN, 0); }
		public RvalblockContext rvalblock() {
			return getRuleContext(RvalblockContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GoodLangParser.RPAREN, 0); }
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functionCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(ID);
			setState(130);
			match(LPAREN);
			setState(131);
			rvalblock();
			setState(132);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public TerminalNode VAL() { return getToken(GoodLangParser.VAL, 0); }
		public LvalblockContext lvalblock() {
			return getRuleContext(LvalblockContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(VAL);
			setState(137);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(135);
				lvalblock();
				}
				break;
			case 2:
				{
				setState(136);
				assignment();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public TerminalNode RET() { return getToken(GoodLangParser.RET, 0); }
		public RvalContext rval() {
			return getRuleContext(RvalContext.class,0);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(GoodLangParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(GoodLangParser.SEMICOLON, i);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitReturnStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitReturnStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_returnStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(RET);
			setState(140);
			rval();
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(141);
					match(SEMICOLON);
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
